<?xml version="1.0" encoding="UTF-8"?>
<!--
  Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>mg.razherana.banking</groupId>
  <artifactId>banking-interface</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>banking-interface TomEE Webapp</name>
  <url>http://tomee.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>jakartaee-api</artifactId>
      <version>10.0</version>
      <scope>provided</scope>
    </dependency>

    <!-- MySQL Connector -->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.33</version>
      <scope>provided</scope>
    </dependency>

    <!-- Hibernate for JPA implementation -->
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>6.1.7.Final</version>
    </dependency>

    <!-- Jackson for JSON processing -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.15.2</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>2.15.2</version>
    </dependency>

    <!-- Thymeleaf for templating -->
    <dependency>
      <groupId>org.thymeleaf</groupId>
      <artifactId>thymeleaf</artifactId>
      <version>3.1.2.RELEASE</version>
    </dependency>

    <!-- CDI API for dependency injection -->
    <dependency>
      <groupId>jakarta.enterprise</groupId>
      <artifactId>jakarta.enterprise.cdi-api</artifactId>
      <version>4.0.1</version>
      <scope>provided</scope>
    </dependency>

    <!-- Banking Courant classes for remote EJB access -->
    <dependency>
      <groupId>mg.razherana.banking</groupId>
      <artifactId>banking-courant</artifactId>
      <version>1.0-SNAPSHOT</version>
      <classifier>classes</classifier>
    </dependency>

    <!-- TomEE OpenEJB Client for remote EJB calls -->
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>openejb-client</artifactId>
      <version>10.0.1</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.tomee.maven</groupId>
        <artifactId>tomee-maven-plugin</artifactId>
        <version>10.1.0</version>
        <configuration>
          <context>ROOT</context>
          <args>-Xmx512m -Dtomee.remote.support=true</args>
          <config>src/main/tomee/conf</config>

          <!-- Auto-reload configuration -->
          <reloadOnUpdate>true</reloadOnUpdate>

          <libs>
            <lib>com.mysql:mysql-connector-j:8.0.33</lib>
          </libs>

          <deployOpenEjbApplication>true</deployOpenEjbApplication>
          <tomeeClassifier>plume</tomeeClassifier>
          <synchronization>
            <extensions>
              <extension>.class</extension>
              <extension>.html</extension>
            </extensions>
          </synchronization>
          <reloadOnUpdate>true</reloadOnUpdate>

          <systemVariables>
            <!-- Debug: Auto reload -->
            <openejb.system.apps>true</openejb.system.apps>

            <tomee.remote.support>true</tomee.remote.support>
            <openejb.cdi.activated>true</openejb.cdi.activated>
            <tomee.serialization.class.blacklist>-</tomee.serialization.class.blacklist>
          </systemVariables>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>apache-snapshot</id>
      <name>Apache Snapshot Repository</name>
      <url>https://repository.apache.org/content/groups/snapshots/</url>
    </repository>
  </repositories>

</project>